--- a/example/flying_gazebo_stereo_cam/package.xml
+++ b/example/flying_gazebo_stereo_cam/package.xml
@@ -24,6 +24,7 @@
   <build_depend >gazebo_msgs</build_depend>
   <build_depend >geometry_msgs</build_depend>
   <build_depend >sensor_msgs</build_depend>
+  <build_depend >pcl_ros</build_depend>
   
   <run_depend>roscpp</run_depend>
   <run_depend >urdf</run_depend>
@@ -36,6 +37,7 @@
   <run_depend >gazebo_msgs</run_depend>
   <run_depend >geometry_msgs</run_depend>
   <run_depend >sensor_msgs</run_depend>
+  <run_depend >pcl_ros</run_depend>
 
 </package>
 
